syntax="proto3";

package  Protos.Monitoring;

import "google/protobuf/timestamp.proto";

message ReceivedMessageDef{
    google.protobuf.Timestamp msg_time = 1;
    string contents = 2;
    string user = 3; 
}